k8sqa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdoqa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdoqa
  template:
    metadata:
      labels:
        app: sdoqa
    spec:
      containers:
      - name: sdoqa
        image: delsynn/sdo:aq
        ports:
        - containerPort: 80
