k8sqa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdoqa
spec:
  selector:
    app: sdoqa
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
