k8sqa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdoqa
spec:
  rules:
  - host: sdoqa.38.cc.ucll.cloud  # Update with your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdoqa
            port:
              number: 80
